integration api authorization call. handling no internet error.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.authorization.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait">
         </activity>
         <activity
