--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,12 @@ ext {
     butterknifeVersion = '8.8.1'
 }
 
+allprojects {
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+}
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -53,6 +59,14 @@ dependencies {
 
     //Phone mask library
     implementation 'com.redmadrobot:inputmask:2.3.0'
+
+    //RX Java 2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    //Binary preferences
+    implementation "com.github.iamironz:binaryprefs:1.0.0-BETA-2"
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
