cameras repository to work with cameras response.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 ext {
-    supportVersion = '26.1.0'
+    supportVersion = '27.0.2'
     retrofitVersion = '2.3.0'
     butterknifeVersion = '8.8.1'
 }
@@ -13,11 +13,11 @@ allprojects {
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.livetyping.moydom"
         minSdkVersion 19
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -40,7 +40,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$supportVersion"
     implementation "com.android.support:design:$supportVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation "com.android.support:support-v4:$supportVersion"
     testImplementation 'junit:junit:4.12'
 
     //Retrofit 2
@@ -67,6 +67,10 @@ dependencies {
 
     //Binary preferences
     implementation "com.github.iamironz:binaryprefs:1.0.0-BETA-2"
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.4.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
