--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,10 @@
             android:name=".ui.activity.appeal.AppealCategoryActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".ui.activity.appeal.AppealSelectCategoryActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
