added crashlytic. fixed crash in settings activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
             android:name=".ui.activity.settings.SettingsActivity"
             android:screenOrientation="portrait">
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="ce2a0f98edaf0ce615ae2f127e3ee80aff9ade97" />
     </application>
 
 </manifest>
