--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,10 @@
             android:name=".ui.activity.appeal.AppealCategoryActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity
+            android:name=".ui.activity.appeal.AppealSelectCategoryActivity"
+            android:screenOrientation="portrait">
+        </activity>
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="ce2a0f98edaf0ce615ae2f127e3ee80aff9ade97" />
