--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize">
         </activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
@@ -67,6 +68,7 @@
                 android:resource="@xml/file_paths">
             </meta-data>
         </provider>
+
         <activity
             android:name=".ui.activity.appeal.AppealCategoryActivity"
             android:screenOrientation="portrait">
@@ -75,9 +77,23 @@
             android:name=".ui.activity.appeal.AppealSelectCategoryActivity"
             android:screenOrientation="portrait">
         </activity>
+
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="ce2a0f98edaf0ce615ae2f127e3ee80aff9ade97" />
+            android:value="ce2a0f98edaf0ce615ae2f127e3ee80aff9ade97"/>
+
+        <activity
+            android:name=".ui.activity.otherSettings.OtherSettingsActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ui.activity.otherSettings.MyTargetActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".ui.activity.otherSettings.NewTargetActivity"
+            android:screenOrientation="portrait">
+        </activity>
     </application>
 
 </manifest>
