added onboarding screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -94,6 +94,8 @@
             android:name=".ui.activity.otherSettings.NewTargetActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".ui.activity.authorization.OnboardingActivity">
+        </activity>
     </application>
 
 </manifest>
