--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath "io.fabric.tools:gradle:1.25.2"
     }
 }
 apply plugin: 'com.android.application'
@@ -16,9 +16,10 @@ repositories {
 
 
 ext {
-    supportVersion = '27.0.2'
+    supportVersion = '27.1.0'
     retrofitVersion = '2.3.0'
     butterknifeVersion = '8.8.1'
+    glideVersion = '4.6.1'
 }
 
 allprojects {
@@ -64,7 +65,7 @@ dependencies {
     //Retrofit 2
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
     // Retrofit XML converter (Simple)
     implementation 'com.squareup.retrofit2:converter-simplexml:2.3.0'
     //Butterknife
@@ -81,18 +82,19 @@ dependencies {
     //Binary preferences
     implementation 'com.github.iamironz:binaryprefs:1.0.0-BETA-2'
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.4.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.4.0'
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
     //Drag swipe helper recycler view
     implementation ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.11.0@aar'){
         transitive=true
     }
+    //MPAndroidChart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
+    //Testts
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true;
     }
-    //MPAndroidChart
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
